// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenshotView render matches snapshot when passed empty screenshotData {} 1`] = `
<div
  className="screenshotView"
  data-automation-id="screenshot-view"
>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <p>
    Screenshot for scan is unavailable
  </p>
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData null 1`] = `
<div
  className="screenshotView"
  data-automation-id="screenshot-view"
>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <p>
    Screenshot for scan is unavailable
  </p>
</div>
`;

exports[`ScreenshotView render matches snapshot when passed empty screenshotData undefined 1`] = `
<div
  className="screenshotView"
  data-automation-id="screenshot-view"
>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <p>
    Screenshot for scan is unavailable
  </p>
</div>
`;

exports[`ScreenshotView render matches snapshot when screenshot data is available 1`] = `
<div
  className="screenshotView"
  data-automation-id="screenshot-view"
>
  <h1
    tabIndex={0}
  >
    Target Page Screenshot
  </h1>
  <ScreenshotContainer
    highlightBoxViewModels={Array []}
    screenshotData={
      Object {
        "base64PngData": "test-base-64-png-data",
      }
    }
  />
</div>
`;
